--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: c
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq gcc-mingw-w64-x86-64
+  - sudo apt-get install -qq gcc-mingw-w64-x86-64 opencl-headers
 
 script:
   - make
