Travis builds will now install the OpenCL Intel driver, and run crackalack_unit_tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ language: c
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq gcc-mingw-w64-x86-64 opencl-headers
+  - ./scripts/travis_install_intel_opencl.sh
 
 script:
-  - make
+  - make && ./crackalack_unit_tests
   - make clean; ./make_windows.sh
