--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_install:
   - sudo ./scripts/travis_install_intel_opencl.sh
 
 script:
-  - make && ./crackalack_unit_tests
+  - make TRAVIS_BUILD=1 && ./crackalack_unit_tests
   - make clean; ./make_windows.sh
