--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_install:
   - sudo ./scripts/travis_install_intel_opencl.sh
 
 script:
-  - make TRAVIS_BUILD=1 && make tests
+  - make TRAVIS_BUILD=1 && travis_wait make tests
   - make clean; ./make_windows.sh
